# Valquiria-Joao_Victor_Huguenin-Lucas_Parente-Pedro_Lippi-Questao2

./: CMakeLists.txt  README.md  main.c
src/: espelhamentoMatriz.c  imprimirMatriz.c  ler_matrix.c  main.c  operacoes_matrix.h
